--- a/index.htm
+++ b/index.htm
@@ -14,7 +14,7 @@
 
           <li><a href="index.htm">Home</a></li>
           <li><a href="https://www.unomaha.edu/">UNO</a></li>
-          <li><a href="file:///C:/Users/jayanth/Desktop/activity2/contact.htm">Contact</a></li>
+          <li><a href="contact.htm">Contact</a></li>
         </ul>
         </nav>
         <h1>"HELLO THERE!" </h1><br>
