adding code to index

--- a/index.htm
+++ b/index.htm
@@ -23,7 +23,7 @@
             <p>
 
             I am Student in Management information Systems at the University of Nebraska
-            at Omaha in Omaha Nebraska. I am from Hyderabad,India.
+            at Omaha in Omaha Nebraska. I am from Hyderabad,India.This is my first semester here in UNO.
            
             <br>
             <br>
