changes in index

--- a/index.htm
+++ b/index.htm
@@ -23,7 +23,10 @@
             <p>
 
             I am Student in Management information Systems at the University of Nebraska
-            at Omaha in Omaha Nebraska. I am from Hyderabad,India.This is my first semester here in UNO. I like to travel and had the opportunity to visit a couple of             countries before coming to the United States and also I like to swim, play cricket. 
+            at Omaha in Omaha Nebraska. I am from Hyderabad,India.This is my 
+            first semester here in UNO. I like to travel and had the opportunity to visit
+            a couple of countries before coming to the United States and also I like to 
+            swim, play cricket. 
            
             <br>
             <br>
